# rustez

./: .gitignore  CLAUDE.md  README.md  SECURITY_CODE_REVIEW.md
.cargo/: audit-ignored.md
.github/workflows/: ci.yml  publish-crates.yml  publish-pypi.yml
docs/superpowers/plans/: 2026-06-19-rustez-cli.md
docs/superpowers/research/: 2026-07-02-rustsec-2026-0190-anyhow.md
docs/superpowers/specs/: 2026-06-19-rustez-cli-design.md
rustez/: CHANGELOG.md  Cargo.toml
rustez-cli/: Cargo.toml
rustez-cli/src/: cli.rs  connect.rs  error.rs  main.rs  output.rs
rustez-cli/src/commands/: config.rs  facts.rs  mod.rs  rpc.rs
rustez-cli/tests/: cli_integration.rs
rustez-py/: Cargo.toml  pyproject.toml
rustez-py/python/rustez/: __init__.py  exceptions.py
rustez-py/src/: lib.rs
rustez-py/tests/: test_diff_rb_id.py  test_host_key_verification.py
rustez/src/: config.rs  device.rs  error.rs  lib.rs  rpc.rs
rustez/src/facts/: chassis.rs  mod.rs  personality.rs  routing_engine.rs  software.rs  xml_entity.rs
rustez/tests/: integration_vsrx.rs
scripts/: check_versions.py
