[package]
name = "rustez-cli"
version = "0.1.0"
edition = "2021"
authors = ["fastrevmd-lab"]
description = "CLI for rustEZ — Junos device automation from the terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastrevmd-lab/rustEZ"

[dependencies]
rustez = { path = "../rustez" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "7"
