[package]
name = "rustez-py"
version = "0.12.1"
edition = "2021"
authors = ["fastrevmd-lab"]
description = "Python bindings for rustEZ — pip install rustez"
license = "MIT"
repository = "https://github.com/fastrevmd-lab/rustez"

[lib]
name = "_rustez_native"
crate-type = ["cdylib"]

[dependencies]
rustez = { path = "../rustez" }
rustnetconf = "0.13"
pyo3 = { version = "0.29", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
