[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustez"
version = "0.12.1"
description = "Python bindings for rustEZ — Junos device automation built on Rust"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["lxml>=4.9.0"]

[tool.maturin]
python-source = "python"
module-name = "rustez._rustez_native"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
