[package]
name = "rustez"
version = "0.10.0"
edition = "2021"
authors = ["fastrevmd-lab"]
description = "A Rust replacement for Juniper PyEZ — async-first Junos automation built on rustnetconf"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastrevmd-lab/rustEZ"
keywords = ["junos", "juniper", "netconf", "network", "automation"]
categories = ["network-programming"]
rust-version = "1.75"

[dependencies]
rustnetconf = "0.10"
tokio = { version = "1", features = ["full"] }
quick-xml = "0.37"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
serial_test = "3"
tempfile = "3"
