[package]
name = "rustez"
version = "0.12.1"
edition = "2021"
authors = ["fastrevmd-lab"]
description = "A Rust replacement for Juniper PyEZ — async-first Junos automation built on rustnetconf"
license = "MIT"
repository = "https://github.com/fastrevmd-lab/rustez"
keywords = ["junos", "juniper", "netconf", "network", "automation"]
categories = ["network-programming"]
rust-version = "1.79"

[dependencies]
rustnetconf = "0.12.3"
tokio = { version = "1", features = ["full"] }
quick-xml = "0.41"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
serial_test = "3"
tempfile = "3"
